fixed mobile navbar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ body {
 .NavLink{
   margin-left: 1vh;
   margin-right: 1vh;
-  min-width:min(18vw, 260px);
+  min-width:min(17vw, 260px);
  
   
 
